# pytickersymbols

./: .coveragerc  .gitignore  .gitpod.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  index_data.pickle  json2wiki_comaprison.py  pyproject.toml  report.xml  requirements-dev.txt  requirements-meta.txt  requirements.txt  setup.cfg  setup.py  stocks.yaml  stocks_akas.yaml  tox.ini  unittest.cfg  yaml2json.py
.github/: dependabot.yml
.github/workflows/: build-indices.yml  ci.yml  dependabot-auto-merge.yml  pr.yml  release.yml  symbolscanner.yml  symbolscannersymbols.yml
.theia/: settings.json
src/pystockdata/data/: stocks.yaml
src/pytickersymbols/: __init__.py  data.py  indices_data.py
src/pytickersymbols/data/: stocks.yaml
src/test/: test_lib.py
tests/: __init__.py  test_benchmarks_pytest.py  test_iterators.py  test_lib.py  test_performance.py  test_yaml_file.py
tools/: README.md  addmetadata.py  build_indices.py  canonicalize_names.py  config.py  enrich_indices.py  enrich_with_yfinance.py  fixyamlakas.py  index_sources.yaml  sync_canonical_to_stocks.py  wiki_table_parser.py  yaml2data.py  yaml2json.py
