[tool.poetry]
name = "pytickersymbols"
version = "1.17.7"
description = "pytickersymbols provides access to google and yahoo ticker symbols"
authors = ["SlashGordon <slash.gordon.dev@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
wheel = ">=0.41.3,<0.47.0"
pytest = ">=7.4.3,<10.0.0"
pytest-cov = "^7.0.0"
PyYAML = "^6.0.1"
pycountry = ">=22.3.5,<25.0.0"
packaging = "^26.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
click = "^8.3.1"
yfinance = "^1.1.0"
pytest-benchmark = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "tests/ --junitxml test-results/test.xml --cov src/pytickersymbols --cov-report term-missing"
pythonpath = ["src"]

[tool.semantic_release]
version_variables = [
    "src/pytickersymbols/__init__.py:__version__",
]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "master"
commit_message = "Release pytickersymbols v{version}"
build_command = "pip install poetry && poetry build"
remove_dist = false

[tool.semantic_release.branches.main]
match = "master"
prerelease = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "SlashGordon <slash.gordon.dev@gmail.comn>"